tests/fixtures/errors/invalid_separator_unbalanced_equals.puml
@startuml
participant A
== Broken separator =
A -> A: noop
@enduml
